Dark Mode Fix

--- a/hyper-notes-react/src/index.css
+++ b/hyper-notes-react/src/index.css
@@ -4,20 +4,14 @@ body{
     font-family: 'Courier New', Courier, monospace;
 }
 
-.notes-bg{
-    padding-top: 2rem;
-    max-width: 960px;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 15px;
-    padding-left: 15px;
-    background-color: #ffffff;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
+.notes-bg {
+  padding-top: 2rem;
+  max-width: 960px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  min-height: 100vh;
+  background-color: #ffffff;
 }
 
 .note{
@@ -60,6 +54,7 @@ body{
   }
   
   textarea{
+    color: #000;
     width: 100%;
     border: none;
     resize: none;
@@ -123,6 +118,13 @@ body{
   }
 
   /* Dark Mode Styling */
+.dark-mode {
+  background-color: #000000;
+}
+
+.dark-mode body{
+  background-color: #000000;
+}
 
 .dark-mode .notes-bg{
   background-color: #000000;
